--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pd2dsy4web</title>
+
+  <link rel="stylesheet" type="text/css" href="/static/styles.css" />
 </head>
 <body>
   <h1>pd2dsy4web</h1>
