--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <p>Hello, world!</p>
 
-    <form action="/build" method="post" enctype="multipart/form-data">
+    <form action="/upload" method="post" enctype="multipart/form-data">
       <div class="form-element">
         <h2>Board</h2>
         <select name="board">
